--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   "devDependencies": {
     "@types/react-router-dom": "^5.3.3",
     "cypress": "^13.6.0",
+    "eslint-plugin-cypress": "^2.15.1",
     "fetch-mock": "^9.11.0",
     "react-test-renderer": "^17.0.2",
     "redux-mock-store": "^1.5.4"
