feat: Добавить unit-тесты компонента Button, проверяем рендеринг с пропсами и сравниваем со снапшотом, генерируем кнопку и тестируем клик, состояние загрузки. Добавить data-testid кнопке и изображению для тестов.

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-test-renderer": "^18.0.7",
     "cypress": "^13.6.0",
     "eslint-plugin-cypress": "^2.15.1",
     "fetch-mock": "^9.11.0",
